name:                roshask
version:             0.4
synopsis:            Haskell support for the ROS robotics framework.
license:             BSD3
license-file:        LICENSE
cabal-version:       >=1.10
author:              Anthony Cowley
maintainer:          Anthony Cowley <acowley@seas.upenn.edu>
copyright:           (c) 2010-2016 Anthony Cowley
category:            Robotics
build-type:          Simple
bug-reports:         http://github.com/acowley/roshask/issues
homepage:            http://github.com/acowley/roshask
tested-with:         GHC >= 7.6
description:         Tools for working with ROS in Haskell.
                     .
                     ros (<http://www.ros.org>) is a software
                     framework that provides a standard software
                     architecture for robotic systems. The main idea
                     of the framework is to support the development
                     and execution of loosely coupled /Node/s
                     connected by typed /Topic/s. Each Node represents
                     a locus of processing, ideally with a minimal
                     interface specified in terms of the types of
                     Topics it takes as input and offers as output.
                     .
                     This package provides libraries for creating new
                     ROS Nodes in Haskell, along with the @roshask@
                     executable for creating new ROS packages and
                     generating Haskell code from message definition
                     files (see the ROS documentation for information
                     on message types).
                     .
                     See
                     <http://github.com/acowley/roshask/wiki> for more
                     information on getting started.


source-repository head
  type:     git
  location: http://github.com/acowley/roshask.git

flag logging
 description: Enable ROS Logging support.
 default:     True

library
  -- Modules exported by the library.
  exposed-modules:     Ros.Node
                       Ros.Topic
                       Ros.Topic.Util
                       Ros.Topic.PID
                       Ros.Topic.Transformers
                       Ros.Topic.Stamped
                       Ros.Topic.Arrow
                       Ros.Rate
                       Ros.Internal.DepFinder
                       Ros.Internal.Msg.MsgInfo
                       Ros.Internal.Msg.SrvInfo
                       Ros.Internal.Msg.HeaderSupport
                       Ros.Internal.Util.BytesToVector
                       Ros.Internal.Util.StorableMonad
                       Ros.Internal.RosTime
                       Ros.Internal.RosTypes
                       Ros.Internal.RosBinary
                       Ros.Internal.SetupUtil
                       Ros.Internal.PathUtil
                       Ros.Util.PID
                       Ros.Service
                       Ros.Service.ServiceTypes

  -- The Log and Header message types must be generated by a
  -- bootstrapped roshask.
  if flag(logging)
    exposed-modules:   Ros.Logging
    other-modules:     Ros.Internal.Log
                       Ros.Internal.Header
                       Ros.Node.RosTcp
    build-depends:     template-haskell

  -- Packages needed in order to build this package.
  build-depends:       base >= 4.5 && < 6,
                       binary >= 0.7.2.1,
                       bytestring,
                       containers,
                       network >= 3.0 && < 3.1,
                       network-bsd >= 2.7 && < 2.9,
                       Cabal >= 1.20,
                       stm >= 2.1.2,
                       mtl >= 2.2.1,
                       time >= 1.1,
                       BoundedChan >= 1.0.0.2,
                       parsec >= 3.1,
                       process >= 1.0.1.3,
                       SafeSemaphore,
                       snap-core >= 0.9,
                       snap-server >= 0.9,
                       storable-tuple >= 0.0.2,
                       transformers >= 0.4,
                       haxr >= 3000.11.1,
                       utf8-string >= 0.3.6,
                       uri >= 0.1.5,
                       vector-space,
                       filemanip > 0.3.6,
                       vector >= 0.10,
                       filepath > 1.1,
                       xml >= 1.3.5,
                       directory > 1.0

  if !os(windows)
    build-depends: unix

  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language: Haskell2010
  -- Modules not exported by this package.
  other-modules:      Ros.Graph.Master Ros.Graph.Slave Ros.Graph.ParameterServer
                      Ros.Node.Type Ros.Node.RunNode Ros.Node.BinaryIter
                      Ros.Node.ConnectionHeader Ros.Topic.Stats
                      Ros.Internal.Util.RingChan
                      Ros.Internal.Util.ArgRemapping
                      Ros.Internal.Util.AppConfig
                      Paths_roshask

-- The ROS .msg definition parser and Haskell code generation utility.
executable roshask
  build-depends:  base >= 4.2 && < 6,
                  bytestring,
                  containers,
                  deepseq,
                  mtl >= 2,
                  vector >= 0.10,
                  binary >= 0.7.2.1,
                  filepath > 1.1,
                  attoparsec > 0.8,
                  directory > 1.0,
                  process >= 1.0.1.2,
                  xml >= 1.3.5,
                  pureMD5 >= 2.1,
                  filemanip > 0.3.6,
                  data-default-generics >= 0.3,
                  roshask
  default-language: Haskell2010
  ghc-options:    -Wall
  main-is:        Main.hs
  other-modules:  Analysis Gen MD5 Parse PkgInit ResolutionTypes
                  FieldImports Unregister PkgBuilder Types
                  Instances.Binary Instances.Storable
                  Instances.Lens Instances.NFData
                  Paths_roshask
  hs-source-dirs: src/executable

test-suite testexe
  type: exitcode-stdio-1.0
  hs-source-dirs: Tests, src/executable
  main-is: AllTests.hs
  ghc-options: -Wall -O0
  default-language: Haskell2010
  build-depends: base >= 4.6 && < 5, bytestring, tasty, tasty-hunit, roshask,
                 containers, mtl,
                 filepath, attoparsec, transformers,
                 pureMD5 >= 2.1
  other-modules: Analysis FieldImports Gen Instances.Binary Instances.Lens
                 Instances.Storable MD5 MsgGen Parse ResolutionTypes
                 TopicTest Types

test-suite servicetest
  type: exitcode-stdio-1.0
  hs-source-dirs: Tests/ServiceClientTests
  main-is: ServiceClientTest.hs
  ghc-options: -Wall -O0
  default-language: Haskell2010
  build-depends: base >= 4.6 && < 5, bytestring, tasty, tasty-hunit, roshask,
                 containers, mtl, filepath, attoparsec, transformers,
                 pureMD5 >= 2.1,
                 data-default-generics
  other-modules: Ros.Test_srvs.AddTwoIntsRequest
                 Ros.Test_srvs.AddTwoIntsResponse
                 Ros.Test_srvs.EmptyRequest Ros.Test_srvs.EmptyResponse
