Name:              ROS-NodeCompose
Version:           0.0
Synopsis:          I am code
Cabal-version:     >=1.6
Category:          Robotics
Build-type:        Custom
Description: A demonstration of composing two Node values in order to
             avoid copying values between processes. All image data is
             kept in process, and pushed over the Topic connecting
             telescope and detectUFO with a pointer copy.

custom-setup
  setup-depends:
      base      >= 4.2 && < 6
    , Cabal
    , roshask

Executable composition
  build-depends:   base             >= 4.2 && < 6
                 , vector           >  0.7
                 , time             >= 1.1
                 , roshask          >= 0.3
                 , lens-family-core >= 1.2
                 , mtl
                 , ROS-std-msgs
                 , ROS-sensor-msgs
  ghc-options:     -threaded
  hs-source-dirs:  src
  main-is:         Main.hs
  other-modules:   Telescope DetectUFO

Executable scope
  Build-Depends:   base             >= 4.2 && < 6
                 , vector           >  0.7
                 , time             >= 1.1
                 , roshask          >= 0.3
                 , lens-family-core >= 1.2
                 , mtl
                 , ROS-std-msgs
                 , ROS-sensor-msgs
  ghc-options:     -threaded -main-is Telescope
  hs-source-dirs:  src
  main-is:         Telescope.hs

Executable detect
  build-depends:   base             >= 4.2 && < 6
                 , vector           >  0.7
                 , time             >= 1.1
                 , roshask          >= 0.3
                 , lens-family-core >= 1.2
                 , mtl
                 , ROS-std-msgs
                 , ROS-sensor-msgs
  ghc-options:     -threaded -main-is DetectUFO
  hs-source-dirs:  src
  main-is:         DetectUFO.hs
