name:                PubSub
version:             0.0
synopsis:            I am code
cabal-version:       >=1.6
category:            Robotics
build-type:          Simple

executable talker
  build-depends:  base             >= 4.2 && < 6
                , vector           >= 0.7
                , time             >= 1.1
                , roshask          >= 0.3
                , ROS-std-msgs
  main-is:        Talker.hs
  hs-source-dirs: src

executable listener
  build-depends:  base             >= 4.2 && < 6
                , vector           >= 0.7
                , time             >= 1.1
                , roshask          >= 0.3
                , lens-family-core >= 1.2
                , ROS-std-msgs
  main-is:        Listener.hs
  hs-source-dirs: src
