name:                ROS-Turtle
version:             0.0
synopsis:            I am code
cabal-version:       >=1.6
category:            Robotics
build-type:          Custom

custom-setup
  setup-depends:
      base      >= 4.2 && < 6
    , Cabal
    , roshask

executable Turtle
  build-depends:  base              >= 4.2 && < 6
                , vector            >  0.7
                , time              >= 1.1
                , roshask           >= 0.3
                , lens-family-core  >= 1.2
                , data-default-generics
                , ROS-std-msgs
                , ROS-geometry-msgs
                , ROS-turtlesim-msgs
  ghc-options:    -O2 -main-is Turtle
  main-is:        Turtle.hs
  hs-source-dirs: src

executable Turtle2
  build-depends:  base              >= 4.2 && < 6
                , vector            >  0.7
                , time              >= 1.1
                , roshask           >= 0.3
                , vector-space
                , ROS-std-msgs
                , ROS-turtlesim-msgs
  ghc-options:    -O2 -main-is Turtle2
  main-is:        Turtle2.hs
  other-modules:  AngleNum
  hs-source-dirs: src

executable Turtle3
  build-depends:  base              >= 4.2 && < 6
                , vector            >  0.7
                , time              >= 1.1
                , roshask           >= 0.3
                , ROS-std-msgs
                , ROS-turtlesim-msgs
  ghc-options:    -O2 -main-is Turtle3
  main-is:        Turtle3.hs
  other-modules:  AngleNum
  hs-source-dirs: src
